remove: useless code

--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,13 @@
       올바른 예) 139 <br />
       틀린 예) 122
     </p>
-    <form>
-      <input type="text" id="user-input" />
-      <button id="submit">확인</button>
-    </form>
+    <input type="text" id="user-input" />
+    <button id="submit">확인</button>
     <h3>📄 결과</h3>
     <div id="result"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@woowacourse/mission-utils@1.0.1/dist/mission-utils.min.js"></script>
-  <script type="module" src="src/index.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
